# src/api/gen/model/index.ts
@@ -55,6 +55,7 @@ export * from './attemptSummary';
 export * from './attemptSummaryStatus';
 export * from './attemptTopicSummaryRow';
 export * from './attemptWritingSubmissionRef';
+export * from './audioTicket';
 export * from './authTokens';
 export * from './badRequestResponse';
 export * from './blueprint';
@@ -128,6 +129,7 @@ export * from './sectionKind';
 export * from './sectionResult';
 export * from './setQuestionTopicsBody';
 export * from './startAttemptRequest';
+export * from './streamTicketedAudioParams';
 export * from './submitSection200';
 export * from './tooManyRequestsResponse';
 export * from './topic';
